# bm-pack

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  main.py  problem_brief.md  pyproject.toml
docs/: cartonizer_optimization_prompt.md
examples/: bm_case_01.json  bm_case_02.json  bm_case_03.json  bm_case_04.json  bm_case_05.json  bm_case_06.json  bm_case_07.json  bm_case_08.json  bm_case_09.json  bm_case_10.json  bm_case_factory.json  bm_data.json  erp_shipped_manual_cases.json  feasible.json  infeasible.json
output/plans/: bm_case_01_plan.json  bm_case_02_plan.json  bm_case_03_plan.json  bm_case_04_plan.json  bm_case_05_plan.json  bm_case_06_plan.json  bm_case_07_plan.json  bm_case_08_plan.json  bm_case_09_plan.json  bm_case_10_plan.json  bm_case_factory_plan.json
src/cartonizer/: __init__.py  cli.py  debug_run.py  feasibility.py  geometry.py  geometry_engine.py  optimizers.py  repair.py  search.py  solver.py  state.py  types.py
tests/: test_bm_case_regression.py  test_erp_shipped_manual_cases.py  test_feasibility.py  test_geometry.py  test_optimizers.py  test_repair_underweight.py  test_solver_basic.py  test_state.py
tools/: compare_erp_shipped_cases.py  export_erp_shipped_cases.py
