[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cartonizer"
version = "0.1.0"
description = "Cartonization solver"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "py3dbp>=0.4",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
